# carml

./: Makefile  README.md  carml.install  carml.opam  dune-project  example.carml  scratch.md
examples/: applications.carml  binops.carml  compound_literals.carml  example_infix.carml  example_lists.carml  example_logger.carml  example_print_secrets.carml  functions.carml  lists.carml  pattern_matching.carml  records.carml  secret_types.carml  simple_literals.carml  symbolics.carml  typecheck_fail.carml  typecheck_ok.carml
src/: ast.ml  dune  error.ml  eval.ml  infer.ml  lexer.mll  parser.mly  pretty.ml  tast.ml  typecheck.ml
src/_build/: log
tests/parser/: dune  parse.ml  parser.expected
