(executable
  (name parse)
  (public_name parse)
  (preprocess (pps ppx_jane))
  (libraries core carml))

(rule
 (targets parser.output)
 (deps    (glob_files ../../../examples/*.carml))
 (action  (with-stdout-to parser.output (
    system "./parse.exe ../../../../examples/*.carml"))))

(alias
 (name runtest)
 (action (diff parser.expected parser.output)))
